# sysadmin_workshop

./: .env  Cargo.toml  README.md
site/: .gitignore  package.json
site/src/: comments.html  future.html  index.html  past.html  styles.css  todo.html  todo.tsx
sql/: init.sql
src/: database_tests.rs  handlers.rs  main.rs  model.rs
