[package]
name = "sysadmin_workshop"
version = "0.1.0"
authors = ["Euan Mendoza <bebopbamf@effectfree.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
sqlx = { version = "0.5.2", features = [ "runtime-async-std-rustls", "postgres", "macros", "chrono" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
serde = "1.0.125"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.40"

[dev-dependencies]
async-std = { version = "1.9.0", features = [ "attributes" ] }
